--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <title>Mishell | Post</title>
 <!-- Google Fonts -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,700">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700,800" rel="stylesheet">
 
 <link rel="stylesheet" href="static/css/bootstrap.2.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!--<script src="/static/js/sticky-kit.min.js"></script>-->
-<script src="static/js/jquery.sticky.js"></script>
-<script src="static/js/collapse.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
 
 <!-- favicons -->
 <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicons/favicon.ico%3Fv=3">
@@ -186,12 +183,15 @@
   transform: scale(15) !important;
   transition: bottom .2s, right .2s, transform .2s;
 }
+
+
+
 </style>
 </head>
 
   <body>
 
-<div class="" style="float:right;z-index:999;position:fixed;float:right;background:black;width:100%;text-align: right;margin-right: 20px;padding-right: 35px;height: 35px;padding-top: 5px;">
+<div class="menubar" style="float:right;z-index:999;position:fixed;float:right;background:black;width:100%;text-align: right;margin-right: 20px;padding-right: 35px;height: 35px;padding-top: 5px;">
   <span class="float:right">
     <a href="blog.html" style="padding-left:30px;text-decoration:none">
         <p style="display:inline; color:#de1b1b;font-family: Roboto;  font-weight:500;">
@@ -215,10 +215,10 @@
 
 
           <div class="row">
-            <div class="col-md-5" style="">
-              <div style="text-align:center">
+            <div class="col-md-5">
+              <div class="epic-text" style="text-align:center">
 
-              <h1 class="">¿Hasta dónde quieres llegar antes de morir?</h1>
+              <h1>¿Hasta dónde quieres llegar antes de morir?</h1>
 
               <h3 style="margin: 25px 0 20px 0;">
                   ¿<b>Muerto</b> en vida por la <b>Rutina</b>? 
@@ -253,7 +253,7 @@
               </div>
             </div>
             <div class="col-md-7" style="">
-              <img style="padding-top:20px" src="static/images/finalRetina.jpg" alt="">
+              <img class="heroimg" style="padding-top:20px" src="static/images/finalRetina.jpg" alt="">
             </div>
           </div>
           <!-- <div class="fab"></div> -->
@@ -263,7 +263,7 @@
 
     <div class="container" style="margin:0; width:100%">
 
-          <div class="row" style="background-color:#000">
+          <div class="row fightclubbar" style="background-color:#000">
             <div class="col-md-12" style="">
               <div style="text-align:center">
               <h1 style="color:#ccc;font-size:28px;font-weight:800">
@@ -273,7 +273,7 @@
             </div>
           </div>
 
-          <div class="row" style="padding: 70px 0px 0px 10px; background:#f3f3f4">
+          <div class="row last-articles" style="padding: 70px 0px 0px 10px; background:#f3f3f4">
 
             <div class="col-md-12" style="text-align:center;">
               <h1 style="color:#777"> Últimos artículos </h1>
@@ -319,7 +319,7 @@
 
           <div class="row" style="padding: 10px 0 40px 0; width:90%; margin: auto;background:#f3f3f4">
 
-            <div class="col-md-12" style="text-align:center; padding-bottom:20px">
+            <div class="col-md-12 favorites" style="text-align:center; padding-bottom:20px">
               <h1 style="color:#ccc; background: #111; padding:15px 0 15px 0">Favoritos </h1>
               <br/>
             </div>
@@ -360,7 +360,7 @@
             </div>
           </div>
 
-          <div class="row" style="text-align:center;  padding:80px 0 40px 0; background:#000; color:#fff">
+          <div class="row epicvideo" style="text-align:center;  padding:80px 0 40px 0; background:#000; color:#fff">
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
@@ -372,7 +372,7 @@
             </div>
           </div>
 
-          <div class="row" style="text-align:center; background:#000; color:#fff; padding:20px 0 90px 0;">
+          <div class="row calltoactionbuttons" style="text-align:center; background:#000; color:#fff; padding:20px 0 90px 0;">
             <div class="col-md-3">
             </div>
             <div class="col-md-3" style="margin-top:12px">
@@ -395,12 +395,11 @@
             </div>
           </div>
           <div class="row" style="background-color:#de1b1b;  padding:10px 0 0px 0; text-align:center">
-              <h1 style="color:black;font-size:18px;font-weight:800; margin:0 0 10px 0; letter-spacing: 3px !important;">
+              <h1 class="epicbottom" style="color:black;font-size:18px;font-weight:800; margin:0 0 10px 0; letter-spacing: 3px !important;">
                 <SPAN>VIVE AL </SPAN>MÁXIMO<SPAN>, MUERE</SPAN> VACÍO</SPAN>
               </h1>
           </div>
     </div>
-
 
   </body>
 
