--- a/estoy_juntando_a_la_banda.html
+++ b/estoy_juntando_a_la_banda.html
@@ -278,7 +278,7 @@
 
 <br/>
 
-              <h1 class="optinwrapper2" style="padding:2px; font-size:4em; background-color:#fff;max-width:600px;margin:auto;color:#111; border: 1px solid #ccc; border-radius:3px; opacity:0.9">Estoy juntando a la banda</h1>
+              <h1 class="optinwrapper2" style="padding:2px; font-size:4em; background-color:#fff;max-width:600px;margin:auto;color:#111; border: none; opacity:0.9">Estoy juntando a la banda</h1>
               <div class="anotherwrapper2" style="">
                 <div class="thesticky2">
                 <div class="optinwrapper2 myshadow">
