--- a/archivo.html
+++ b/archivo.html
@@ -241,7 +241,7 @@
       color: #eee;
       font-weight: 300;
     }
-    .menubuttonswrapper a:hover {
+    .menubuttonswrapper:not(.logo) a:hover {
       /*background-color:#de1b1b;*/
       color:#888;
     }
@@ -416,7 +416,10 @@
         <div class="menu">
           <div class="menubuttonswrapper">
 
-    <span class="logo" style="float: left;padding-left: 30px;width: 30%;font-size: 30px; font-weight: bolder; text-transform: uppercase; font-weight:bold; font-size: 32px;letter-spacing: 0px;">Mejor<span class="hombre" style=" color: #ff5555; font-weight: lighter; ">Hombre</span>
+    <span class="logo" style="float: left;padding-left: 30px;width: 30%;font-size: 30px; font-weight: bolder; text-transform: uppercase; font-weight:bold; font-size: 32px;letter-spacing: 0px;">
+      <a href="index.html">
+      Mejor<span class="hombre" style=" color: #ff5555; font-weight: lighter; ">Hombre</span>
+      </a>
     </span>
 
 
