--- a/pagina/2.html
+++ b/pagina/2.html
@@ -501,6 +501,7 @@
     .border-image{
       float:left;
       max-width:100%;
+      margin-bottom:10px;
     }
     .entry_wrapper{
       border-bottom: 1px solid #e8e8e8;
@@ -560,11 +561,11 @@
 
     <div class="row">
 
+          <a href="../blogging/mishell.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../blogging/mishell.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/mhBigSubtitle.png" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/mhBigSubtitle.png" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -597,11 +598,11 @@ Aunque mejorhombre parezca construido con un Wordpress, no es así, está 100% p
 
     <div class="row">
 
+          <a href="../blogging/entrevista-a-dean-romero.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../blogging/entrevista-a-dean-romero.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/dean-romero.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/dean-romero.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -634,11 +635,11 @@ Cuando me lancé a grabar un podcas ...
 
     <div class="row">
 
+          <a href="../life/como-resolver-tus-problemas-como-alejandro-magno.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../life/como-resolver-tus-problemas-como-alejandro-magno.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/alejandromagno.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/alejandromagno.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -672,11 +673,11 @@ Todos sus cabos estaban  ...
 
     <div class="row">
 
+          <a href="../sex-and-girls/como-hacer-el-amor-realmente-bien-a-una-mujer.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../sex-and-girls/como-hacer-el-amor-realmente-bien-a-una-mujer.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/makinglove.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/makinglove.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -714,11 +715,11 @@ Pero n ...
 
     <div class="row">
 
+          <a href="../motivacion/mata-a-la-bestia-o-muere-intentandolo.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../motivacion/mata-a-la-bestia-o-muere-intentandolo.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/grizzley_opt.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/grizzley_opt.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -752,11 +753,11 @@ Te adentraste en el bosque, más allá de los límites dónde la mayoría ha lle
 
     <div class="row">
 
+          <a href="../superpoderes/como-vencer-cualquier-miedo.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../superpoderes/como-vencer-cualquier-miedo.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/bestiaMiedo_opt.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/bestiaMiedo_opt.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -792,11 +793,11 @@ A ser ...
 
     <div class="row">
 
+          <a href="../sex-and-girls/quieres-poder-hablar-con-cualquier-desconocida-lee-esto.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../sex-and-girls/quieres-poder-hablar-con-cualquier-desconocida-lee-esto.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/chicaPlaya.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/chicaPlaya.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -831,11 +832,11 @@ Si hubieses estado allí, y la  ...
 
     <div class="row">
 
+          <a href="../sex-and-girls/como-vencer-la-ansiedad-sexual.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../sex-and-girls/como-vencer-la-ansiedad-sexual.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/sexyGirlBed_opt.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/sexyGirlBed_opt.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -869,11 +870,11 @@ Con el tiempo, logré hacerlo m ...
 
     <div class="row">
 
+          <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/empezarblog.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/empezarblog.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -906,11 +907,11 @@ Diciéndote cómo montar tu blog. Hablándote de wordpress, plugins, y vendiénd
 
     <div class="row">
 
+          <a href="../sex-and-girls/como-superar-una-ruptura.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../sex-and-girls/como-superar-una-ruptura.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/lonley_opt.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/lonley_opt.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -944,11 +945,11 @@ Y no, no t ...
 
     <div class="row">
 
+          <a href="../motivacion/que-hacer-cuando-estas-deprimido.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../motivacion/que-hacer-cuando-estas-deprimido.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/deprimido2.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/deprimido2.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -981,11 +982,11 @@ Ayer me dijo que ya estaba cansada de todo. Que  ...
 
     <div class="row">
 
+          <a href="../superpoderes/como-hablar-claro-directo-y-relajado.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../superpoderes/como-hablar-claro-directo-y-relajado.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/lionroaring.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/lionroaring.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -1390,7 +1391,7 @@ Ayer me dijo que ya estaba cansada de todo. Que  ...
 
 </style>
 
-    <footer class="footer" style="background-color:#f3f3f3">
+    <footer class="footer" style="background-color:#cacaca">
       <div class="container" style=" background: black; width: 100%; padding-top: 0; padding-bottom:50px">
           <div class="row">
             <div class="col-md-12">
