--- a/pagina/3.html
+++ b/pagina/3.html
@@ -501,6 +501,7 @@
     .border-image{
       float:left;
       max-width:100%;
+      margin-bottom:10px;
     }
     .entry_wrapper{
       border-bottom: 1px solid #e8e8e8;
@@ -560,11 +561,11 @@
 
     <div class="row">
 
+          <a href="../fitness/deprimido-hora-de-levantar-pesas.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../fitness/deprimido-hora-de-levantar-pesas.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/planet-fitness-deadlift.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/planet-fitness-deadlift.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -598,11 +599,11 @@ Y puede que levantar pesos, en ci ...
 
     <div class="row">
 
+          <a href="../life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/lagranmentira.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/lagranmentira.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -639,11 +640,11 @@ Tienes que sacar tu mejor versión. Tienes que ser el macho alfa.
 
     <div class="row">
 
+          <a href="../superpoderes/hasta-los-cojones-de-todo-cambia-tu-vida-levantandote-a-las-5.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../superpoderes/hasta-los-cojones-de-todo-cambia-tu-vida-levantandote-a-las-5.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/mananasMilagrosas.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/mananasMilagrosas.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -678,11 +679,11 @@ Te sientes cansado de todo. &quot;Tiene que haber algo más en mi vida&quot; te 
 
     <div class="row">
 
+          <a href="../superpoderes/lenguaje-corporal-alfa---aumenta-tu-testosterona.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../superpoderes/lenguaje-corporal-alfa---aumenta-tu-testosterona.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/jamesBondLenguajeCorporal.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/jamesBondLenguajeCorporal.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -717,11 +718,11 @@ O puedes emp ...
 
     <div class="row">
 
+          <a href="../superpoderes/guia-definitiva-sobre-duchas-frias.html" style="display:inline-block">
         <div class="col-md-5">
-          <a href="../superpoderes/guia-definitiva-sobre-duchas-frias.html">
-            <img class="border-image" src="../static/images/posts/thumbnails/Spartans-Rain.jpg" alt="">
-          </a>
+            <img class="border-image img-responsive" src="../static/images/posts/thumbnails/Spartans-Rain.jpg" alt="">
         </div>
+          </a>
 
         <div class="col-md-7">
           <p>
@@ -1126,7 +1127,7 @@ sentirte como un león rugiendo al mundo, reafirmar tus o ...
 
 </style>
 
-    <footer class="footer" style="background-color:#f3f3f3">
+    <footer class="footer" style="background-color:#cacaca">
       <div class="container" style=" background: black; width: 100%; padding-top: 0; padding-bottom:50px">
           <div class="row">
             <div class="col-md-12">
