--- a/reto.html
+++ b/reto.html
@@ -1134,7 +1134,7 @@ Estos vídeos se me están haciendo aburridos, bueno no tanto el vídeo sino ten
 
 </style>
 
-    <footer class="footer" style="background-color:#f3f3f3">
+    <footer class="footer" style="background-color:#cacaca">
       <div class="container" style=" background: black; width: 100%; padding-top: 0; padding-bottom:50px">
           <div class="row">
             <div class="col-md-12">
