--- a/reto/2.html
+++ b/reto/2.html
@@ -1112,7 +1112,7 @@ Toca descansar y tomármelo con algo de calma. Hoy me lo tomaré con calma, y qu
 
 </style>
 
-    <footer class="footer" style="background-color:#f3f3f3">
+    <footer class="footer" style="background-color:#cacaca">
       <div class="container" style=" background: black; width: 100%; padding-top: 0; padding-bottom:50px">
           <div class="row">
             <div class="col-md-12">
