--- a/reto/3.html
+++ b/reto/3.html
@@ -1112,7 +1112,7 @@ Enfrentarme al podcast me está resultando doloroso y d...
 
 </style>
 
-    <footer class="footer" style="background-color:#f3f3f3">
+    <footer class="footer" style="background-color:#cacaca">
       <div class="container" style=" background: black; width: 100%; padding-top: 0; padding-bottom:50px">
           <div class="row">
             <div class="col-md-12">
